--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div> 
             <div class="input"> 
                 <input id='input-1'> 
-                <div></div> 
+                <div class="prompt"></div> 
             </div> 
         </div> 
         <div id="btn-exchange"> 
@@ -45,7 +45,7 @@
             </div> 
             <div class="input"> 
                 <input id='input-2'> 
-                <div></div> 
+                <div class="prompt"></div> 
             </div> 
         </div> 
     </section> 
