loading window was  added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Конвертер валют</title> 
     <link rel="stylesheet" href="./style.css"> 
 </head> 
-<body> 
+<body>
+    <div class="cover"></div> 
     <section class="main"> 
         <div id="block-1"> 
             <div class="title">У меня есть</div> 
@@ -33,6 +34,7 @@
                 <path d="M2.00008 25.5949L38.6094 25.5949" stroke="black" stroke-width="2"/> 
             </svg> 
         </div> 
+        <div class="loading">Loading...</div>
         <div id="block-2"> 
             <div class="title">Хочу приобрести</div> 
             <div class="menu"> 
