--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" href="./style.css"> 
 </head> 
 <body>
-    <div class="cover"></div> 
+    
+    <div class="cover"></div>
+    <header> 
+        <img src="./src/logo.svg" alt="logo"> 
+        <div> 
+            <p>БАНК</p> 
+            <p>БИЗНЕС</p> 
+            <p>ИНВЕСТИЦИИ</p> 
+            <p>СТРАХОВАНИЕ</p> 
+            <p>МОБАЙЛ</p> 
+            <p>ПУТЕШЕСТВИЯ</p> 
+            <p>РАЗВЛЕЧЕНИЯ</p> 
+        </div> 
+        <button>ВОЙТИ</button> 
+    </header> 
+    <div class="converter">Конвертер валют</div>
+    
     <section class="main"> 
         <div id="block-1"> 
             <div class="title">У меня есть</div> 
